tests/fail/return_ref.stderr
error[E0454]: Returning reference to parameter 'x' requires explicit dependency declaration (<- x)
 --> tests/fail/return_ref.tk:3:5
  |
 3 |     return &x // EXPECT: error[E0454]:
  |     ^
error[E0454]: Returning reference to parameter 'y' requires explicit dependency declaration (<- y)
 --> tests/fail/return_ref.tk:10:5
   |
 10 |     return &y // EXPECT: error[E0454]:
   |     ^
error[E0461]: Illegal use of permission suffixes (# or $) in everyday contexts. Modifiers are strictly limited to declarations or explicit mutable method calls.
 --> tests/fail/return_ref.tk:27:31
   |
 27 |     auto ref_a = RefInt(&val=&a#)
   |                               ^
error[E0456]: Object 'ref_a' (lived longer) cannot depend on 'b' (lived shorter)
 --> tests/fail/return_ref.tk:32:21
   |
 32 |         ref_a.&#val = &b // EXPECT: error[E0456]:
   |                     ^
